--- a/about.html
+++ b/about.html
@@ -40,6 +40,8 @@
 	<div id="logo-container">
         <a href="index.html"><img src="images/3sided_logo1.png" alt="logo" id="logo"></a>
 	</div>
+	<div id="mobile-menu">
+	</div>
 	<nav>
 		<ul id="menu">
 			<li><a href="work.html">WORK</a></li>
