--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 
                     <label>What can we help you with&#63;:</label>
                     <textarea rows="10" id="comments" data-required data-min="5"></textarea>
-                    <div class="g-recaptcha" data-sitekey="6LemBgsTAAAAABW-dbg6DIr91NhyRIIpLpQXCCSI"></div>
+                    <div class="g-recaptcha" data-size="compact" data-sitekey="6LemBgsTAAAAABW-dbg6DIr91NhyRIIpLpQXCCSI"></div>
                     <div>
                         <button type="submit">Submit</button>
                     </div>
