--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
 
     
 <div class="wrapper">
+<div id="contact-bkg">   
     <div id="contact-form">
         <h2>Schedule a consultation:</h2>
         <div class="formblock">
@@ -72,7 +73,8 @@
                     </div>
                 </form>
         </div>
-    </div>       
+    </div>
+</div>    
 </div>	
 	
 	<br class="clear">
