--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="index">
         	<br class="clear">
         <div id="index-main">
-                <h3>Nam a ex lorem. Suspendisse ac enim quis ante vehicula porta ac vel urna. Maecenas lobortis molestie euismod. Nulla eu lorem mi. Nunc lacus eros, dictum et orci quis, laoreet lacinia ligula. Aenean auctor sed dolor a feugiat. Aliquam sed ligula vel dui vehicula vestibulum eu vitae elit.<br><br>Donec posuere magna ac sapien rutrum egestas. Nam et dui sollicitudin, porttitor nunc sed, molestie urna. Vestibulum non lectus tortor. Quisque accumsan sit amet lectus in accumsan. Nunc faucibus in erat at gravida. Curabitur et tempus erat. Donec ac lorem vel urna auctor tempus id sed dui.</h3>
+                <h3>We create spaces, experiences, and solutions for nonprofits and small businesses.</h3>
         </div>
     </div>        
 </div>	
