--- a/about.html
+++ b/about.html
@@ -55,17 +55,35 @@
     
 <div class="wrapper">
     <div id="about-main">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis est vel felis laoreet sollicitudin. Nulla porttitor ultricies enim id tristique. Integer hendrerit auctor metus, sit amet varius mauris. Nam lacus erat, porttitor eu mauris a, eleifend rhoncus libero. Nullam tempor dolor eu consectetur ornare. Mauris quis nisi viverra, rutrum dolor a, pretium neque. Nam id magna rhoncus, vehicula quam non, lacinia risus. Etiam ut faucibus lacus, nec ornare ante. Nulla ac odio et nunc varius efficitur congue quis purus. Etiam fringilla eros ut nisl interdum, vel dapibus orci dapibus. Cras convallis dignissim orci ac interdum.</p>
+        <p>3Sided Projects was born when Vin, Scriv and Jenna met in Philadelphia while pursuing their MFAs in exhibition design. After graduation, Jenna moved to Sacramento, but the three friends decided that distance would not keep them from collaborating, rather they would use their bi-coastal reach to benefit their clients and creative endeavors.</p>
     </div>
     <div id="about-individual">
         <div class="person col" id="person1">
-            <div class="person-image"><img src="images/person1.png">
-                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean blandit, erat eget pulvinar varius, ligula urna semper mi, nec rutrum purus magna eu lectus. Nulla a volutpat enim, vel tempus lectus. Vestibulum pretium mattis velit, quis aliquet sapien suscipit sed.</p>
+            <div class="person-image"><img src="images/jenna.png">
+                <p>Jenna is a designer, specializing in digital collaboration and prototyping for the development of
+
+progressive design projects. She received her BA in Art History from the University of California Santa 
+
+Barbara, later completing her graduate work in Exhibition Planning and Design at the University of the 
+
+Arts in Philadelphia. Now back in her home state of California, Jenna is driven by a deep belief in human-centered design decisions and iterations. By focusing on project communication she is able to guide a 
+
+variety of design projects from their incubation stage into final build.</p>
             </div>
         </div>
         <div class="person col" id="person2">
-            <div class="person-image"><img src="images/person2.png">
-                <p>Duis congue orci eu tristique ullamcorper. Ut nulla neque, mollis in dignissim a, maximus ac sem. Nullam facilisis nisl nisi, in aliquet lectus aliquam sed. In aliquam tempor tempus. Fusce sit amet malesuada turpis, eget iaculis lectus. Nam facilisis aliquet porta. Praesent lacinia a ex sit amet fringilla.</p>
+            <div class="person-image"><img src="images/vinnie.png">
+                <p>Vinson is an artist, designer, illustrator, and exhibition planner from Philadelphia, PA. He received a BFA
+
+in Painting & Drawing and MFA in Museum Exhibition Planning & Design, both from the University of the 
+
+Arts in Philadelphia. He takes anyone with a sense of humor very seriously. He believes playfulness is a 
+
+pillar of design which makes him a very curious individual who takes pleasure in seeking undiscovered 
+
+possibilities. He’s self-disciplined and very much open to new opportunities which utilize his skills, both 
+
+seasoned and newly learned, to expand the knowledge of all things interesting.</p>
             </div>    
         </div>
         <div class="person col" id="person3">
