--- a/about.html
+++ b/about.html
@@ -60,15 +60,7 @@
     <div id="about-individual">
         <div class="person col" id="person1">
             <div class="person-image"><img src="images/jenna.png">
-                <p>Jenna is a designer, specializing in digital collaboration and prototyping for the development of
-
-progressive design projects. She received her BA in Art History from the University of California Santa 
-
-Barbara, later completing her graduate work in Exhibition Planning and Design at the University of the 
-
-Arts in Philadelphia. Now back in her home state of California, Jenna is driven by a deep belief in human-centered design decisions and iterations. By focusing on project communication she is able to guide a 
-
-variety of design projects from their incubation stage into final build.</p>
+                <p>Jenna is a designer, specializing in digital collaboration and prototyping for the development of progressive design projects. She received her BA in Art History from the University of California Santa Barbara, later completing her graduate work in Exhibition Planning and Design at the University of the Arts in Philadelphia. Now back in her home state of California, Jenna is driven by a deep belief in human-centered design decisions and iterations. By focusing on project communication she is able to guide a variety of design projects from their incubation stage into final build.</p>
             </div>
         </div>
         <div class="person col" id="person2">
@@ -87,8 +79,8 @@ seasoned and newly learned, to expand the knowledge of all things interesting.</
             </div>    
         </div>
         <div class="person col" id="person3">
-            <div class="person-image"><img src="images/person3.png">
-                <p>Curabitur ullamcorper ipsum ut nisl hendrerit cursus. Nunc euismod mollis mauris ut pharetra. Sed vitae dui risus. Curabitur blandit quam vehicula, euismod orci id, consequat purus. Suspendisse sodales lectus vel commodo lobortis. Nullam porttitor sapien id enim porttitor tristique. Curabitur augue massa, iaculis ut ipsum eu, blandit pellentesque nulla.</p>
+            <div class="person-image"><img src="images/scriv.png">
+                <p>Ashley is multi-faceted designer focussed on interactive technology, user experience, and systems.  Her work, both personally and professionally, expresses an appreciation of the tensions between order, hierarchy, and dimensionality. In her work with art museums, she transforms complex scholarly research into interactive concepts; engaging visitors through surprisingly human experiences with technology. Whether it’s designing an app or the menu for a dinner party, Ashley sees each creative moment as an opportunity to play and innovate.</p>
             </div>    
         </div>
     </div>
