--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
     
 <div class="wrapper">
 <div id="contact-bkg">   
-    <div id="contact-form">
-        <h2>Schedule a consultation:</h2>
+    <div id="contact-form" class="flexbox-container">
         <div class="formblock">
+            <h3>Feel free to drop us a line. We would love to hear about your ideas.</h3>
                 <form method="post" id="form1" class="validator">
                     <label>Full Name:</label>
                     <input type="text" id="name" data-required data-min="3" data-max="50">
