--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     
 <div class="wrapper">
-    <div id="index">
+    <div id="index" class="flexbox-container">
         	<br class="clear">
         <div id="index-main">
                 <h1>We create spaces, experiences, and solutions for nonprofits and small businesses.</h1>
